WIP updating product creation, adding merchant ID moving to access via API. WIP validation errors component. Moving schemas into their own directories. Implement UserInfo API. Web app sends user-login and update-phone events via API. Custom SLS plugin supports importing Cloud Formation stack output values. Adds favicon to website. Generalized authenticated AWS API Gateway requests. Expand the number of npm commands to build/deploy projects.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,19 @@
     "test": "./node_modules/.bin/mocha --recursive -R min ./**/*.spec.js",
     "lint": "./node_modules/.bin/eslint ./**/*.js ./**/*.jsx",
     "lint:fix": "./node_modules/.bin/eslint --fix ./**/*.js ./**/*.jsx",
-    "sim:scrape": "node ./products/test/scrape-products-exec.js",
-    "web:build:test": "pushd ./web/ && sls $NODE_DEBUG_OPTION buildWebApp -s test",
+    "product-catalog-api:deploy:test": "pushd ./product-catalog/api/ && sls deploy -s test && popd",
+    "product-catalog-api:deploy:demo": "pushd ./product-catalog/api/ && sls deploy -s demo && popd",
+    "product-catalog-api:deploy:prod": "pushd ./product-catalog/api/ && sls deploy -s prod && popd",
+    "product-catalog-builder:deploy:test": "pushd ./product-catalog/builder/ && sls deploy -s test && popd",
+    "product-catalog-builder:deploy:demo": "pushd ./product-catalog/builder/ && sls deploy -s demo && popd",
+    "product-catalog-builder:deploy:prod": "pushd ./product-catalog/builder/ && sls deploy -s prod && popd",
+    "retail-stream:deploy:test": "pushd ./retail-stream/ && sls deploy -s test && popd",
+    "retail-stream:deploy:demo": "pushd ./retail-stream/ && sls deploy -s demo && popd",
+    "retail-stream:deploy:prod": "pushd ./retail-stream/ && sls deploy -s prod && popd",
+    "user-info-api:deploy:test": "pushd ./user-info/api/ && sls deploy -s test && popd",
+    "user-info-api:deploy:demo": "pushd ./user-info/api/ && sls deploy -s demo && popd",
+    "user-info-api:deploy:prod": "pushd ./user-info/api/ && sls deploy -s prod && popd",
+    "web:build:test": "pushd ./web/ && sls buildWebApp -s test",
     "web:build:prod": "pushd ./web/ && sls buildWebApp -s prod",
     "web:build:demo": "pushd ./web/ && sls buildWebApp -s demo",
     "web:deploy:test": "pushd ./web/ && sls deploy -s test && popd",
