Fix-up on reference for ingress schema for catalog builder. Prefer product creation over product create for naming. Fix issue with data field when writing events to the stream preventing them from being processed. Provides distinct API gateway id for product creation. Introduce just a few more NPM commands.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "product-catalog-builder:deploy:test": "pushd ./product-catalog/builder/ && sls deploy -s test && popd",
     "product-catalog-builder:deploy:demo": "pushd ./product-catalog/builder/ && sls deploy -s demo && popd",
     "product-catalog-builder:deploy:prod": "pushd ./product-catalog/builder/ && sls deploy -s prod && popd",
+    "product-creation-api:deploy:test": "pushd ./product-creation/api/ && sls deploy -s test && popd",
+    "product-creation-api:deploy:demo": "pushd ./product-creation/api/ && sls deploy -s demo && popd",
+    "product-creation-api:deploy:prod": "pushd ./product-creation/api/ && sls deploy -s prod && popd",
     "retail-stream:deploy:test": "pushd ./retail-stream/ && sls deploy -s test && popd",
     "retail-stream:deploy:demo": "pushd ./retail-stream/ && sls deploy -s demo && popd",
     "retail-stream:deploy:prod": "pushd ./retail-stream/ && sls deploy -s prod && popd",
