--- a/buildspec.yml
+++ b/buildspec.yml
@@ -52,6 +52,7 @@ phases:
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 2.Record"    $CODEBUILD_SRC_DIR/product-photos/2.record
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 3.Receive"   $CODEBUILD_SRC_DIR/product-photos/3.receive
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 4.Fail"      $CODEBUILD_SRC_DIR/product-photos/4.fail
+      - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 4.Success"   $CODEBUILD_SRC_DIR/product-photos/4.success
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 5.Unmessage" $CODEBUILD_SRC_DIR/product-photos/5.unmessage
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - 6.Report"    $CODEBUILD_SRC_DIR/product-photos/6.report
       - $CODEBUILD_SRC_DIR/build/2.deploy.sh "Deploying Product Photos - Process"     $CODEBUILD_SRC_DIR/product-photos/process       # deploy the StepFunction that depends on Lambdas 1-6
