--- a/package.json
+++ b/package.json
@@ -6,9 +6,69 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --recursive -R min ./**/*.spec.js",
     "lint": "./node_modules/.bin/eslint ./**/*.js ./**/*.jsx",
-    "sim:scrape": "node ./product-creation/test/scrape-products-exec.js",
-    "web:build": "./node_modules/.bin/webpack --config ./web/webpack.config.js",
-    "web:dev:hot": "./node_modules/.bin/webpack-dev-server --config ./web/webpack.config.js --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./web/"
+
+    "root:install":         "./build/0.env.sh && ./build/1.install.sh \"Installing Top-Level Project Dependencies\"            .",
+    "root:install:all":     "npm run root:install && npm run catalog:install:all && npm run photos:install:all",
+    "root:deploy:all":      "npm run stream:deploy && npm run create:deploy && npm run catalog:deploy:all && npm run photos:deploy:all && npm run web:deploy:all",
+    "root:remove:all":      "npm run web:remove:all && npm run photos:deploy:all && npm run catalog:deploy:all && npm run create:deploy && npm run stream:deploy",
+
+    "stream:deploy":        "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Retail Stream\"                          ./retail-stream",
+    "stream:remove":        "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Retail Stream\"                           ./retail-stream",
+
+    "create:install":       "./build/0.env.sh && ./build/1.install.sh \"Installing Product Creation Dependencies\"            ./product-creation/api",
+    "create:deploy":        "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Creation API\"                   ./product-creation/api",
+    "create:remove":        "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Creation API\"                    ./product-creation/api",
+
+    "catalog:install:1":    "./build/0.env.sh && ./build/1.install.sh \"Installing Product Catalog Dependencies\"             ./product-catalog/builder",
+    "catalog:install:2":    "./build/0.env.sh && ./build/1.install.sh \"Installing Product Catalog API\"                      ./product-catalog/api",
+    "catalog:install:all":  "npm run catalog:install:1 && npm run catalog:install:2",
+
+    "catalog:deploy:1":     "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Catalog Processor\"              ./product-catalog/builder",
+    "catalog:deploy:2":     "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Catalog API\"                    ./product-catalog/api",
+    "catalog:deploy:all":   "npm run catalog:deploy:1 && npm run catalog:deploy:2",
+
+    "catalog:remove:1":     "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Catalog Processor\"               ./product-catalog/builder",
+    "catalog:remove:2":     "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Catalog API\"                     ./product-catalog/api",
+    "catalog:remove:all":   "npm run catalog:remove:2 && npm run catalog:remove:1",
+
+    "photos:install:1":     "./build/0.env.sh && ./build/1.install.sh \"Installing Product Photos - Execute Dependencies\"    ./product-photos/0.execute",
+    "photos:install:2":     "./build/0.env.sh && ./build/1.install.sh \"Installing Product Photos - Message Dependencies\"    ./product-photos/2.message",
+    "photos:install:3":     "./build/0.env.sh && ./build/1.install.sh \"Installing Product Photos - Receive Dependencies\"    ./product-photos/3.receive",
+    "photos:install:4":     "./build/0.env.sh && ./build/1.install.sh \"Installing Product Photos - Unmessage Dependencies\"  ./product-photos/5.unmessage",
+    "photos:install:5":     "./build/0.env.sh && ./build/1.install.sh \"Installing Product Photos - Report Dependencies\"     ./product-photos/6.report",
+    "photos:install:all":   "npm run photos:install:1 && npm run photos:install:2 && npm run photos:install:3 && npm run photos:install:4 && npm run photos:install:5",
+
+    "photos:deploy:1":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - Data\"                  ./product-photos/data",
+    "photos:deploy:2":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 1.Assign\"              ./product-photos/1.assign",
+    "photos:deploy:3":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 2.Message\"             ./product-photos/2.message",
+    "photos:deploy:4":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 2.Record\"              ./product-photos/2.record",
+    "photos:deploy:5":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 3.Receive\"             ./product-photos/3.receive",
+    "photos:deploy:6":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 4.Fail\"                ./product-photos/4.fail",
+    "photos:deploy:7":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 4.Success\"             ./product-photos/4.success",
+    "photos:deploy:8":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 5.Unmessage\"           ./product-photos/5.unmessage",
+    "photos:deploy:9":      "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 6.Report\"              ./product-photos/6.report",
+    "photos:deploy:10":     "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - Process\"               ./product-photos/process",
+    "photos:deploy:11":     "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Product Photos - 0.Execute\"             ./product-photos/0.execute",
+    "photos:deploy:all":    "npm run photos:deploy:1 && npm run photos:deploy:2 && npm run photos:deploy:3 && npm run photos:deploy:4 && npm run photos:deploy:5 && npm run photos:deploy:6 && npm run photos:deploy:7 && npm run photos:deploy:8 && npm run photos:deploy:9 && npm run photos:deploy:10 && npm run photos:deploy:11",
+
+    "photos:remove:1":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - Data\"                   ./product-photos/data",
+    "photos:remove:2":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 1.Assign\"               ./product-photos/1.assign",
+    "photos:remove:3":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 2.Message\"              ./product-photos/2.message",
+    "photos:remove:4":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 2.Record\"               ./product-photos/2.record",
+    "photos:remove:5":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 3.Receive\"              ./product-photos/3.receive",
+    "photos:remove:6":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 4.Fail\"                 ./product-photos/4.fail",
+    "photos:remove:7":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 4.Success\"              ./product-photos/4.success",
+    "photos:remove:8":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 5.Unmessage\"            ./product-photos/5.unmessage",
+    "photos:remove:9":      "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 6.Report\"               ./product-photos/6.report",
+    "photos:remove:10":     "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - Process\"                ./product-photos/process",
+    "photos:remove:11":     "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Product Photos - 0.Execute\"              ./product-photos/0.execute",
+    "photos:remove:all":    "npm run photos:remove:11 && npm run photos:remove:10 && npm run photos:remove:9 && npm run photos:remove:8 && npm run photos:remove:7 && npm run photos:remove:6 && npm run photos:remove:5 && npm run photos:remove:4 && npm run photos:remove:3 && npm run photos:remove:2 && npm run photos:deploy:1",
+
+    "web:install":          "./build/0.env.sh && ./build/1.install.sh \"Installing Web App Dependencies\"                     ./web",
+    "web:build":            "./build/0.env.sh && ./build/2.sls.sh buildWebApp \"Building Web App\"                            ./web",
+    "web:deploy":           "./build/0.env.sh && ./build/2.sls.sh deploy \"Deploying Web App\"                                ./web",
+    "web:deploy:all":       "npm run web:build && npm run web:deploy",
+    "web:remove:all":       "./build/0.env.sh && ./build/2.sls.sh remove \"Removing Web App\"                                 ./web"
   },
   "repository": {
     "type": "git",
