correct self reference correct custom attribute naming to standard name use standard exports rather than out of date copy-paste add comment

--- a/product-catalog/builder/serverless.yml
+++ b/product-catalog/builder/serverless.yml
@@ -274,4 +274,4 @@ resources:
       Value:
         Fn::GetAtt: [ ProductCatalogReader, Arn ]
       Export:
-        Name: ${self:custom.exportProductCatalogReaderArn}
+        Name: ${self:custom.productCatalogBuilder.custom.exportProductCatalogReaderArn}
