Adds buy handler to hello-retail website and creates service behind it (#40)
* purchase api and click handler for buy button

* intermediate changes to serverless templates.  changes to deployment plugin for new format of imported arns.  initial pass at button handler in react page.  added in product purchase api.

* couple more fixes to website deployment (not web-app)

* fixes to roles and comments to clarify cross- vs same-account implementation.

* reminder

* user control for navigating the pages for customer role.  confo on having bought a product.

--- a/product-catalog/builder/serverless.yml
+++ b/product-catalog/builder/serverless.yml
@@ -190,6 +190,8 @@ resources:
               Principal:
                 AWS: # role ARNs that are allowed to read from the Product Catalog
                   - 'arn:aws:iam::${self:custom.private.accountId}:role/${self:custom.stage}HelloRetailWebIdentity'
+                  # TODO why is this statement hard-coded as 'arn:aws:sts::515126931066:assumed-role/testHelloRetailWebIdentity/hello-retail-website-test'
+                  # in the console for this role's trust relationships?
               Action: sts:AssumeRole
         ManagedPolicyArns:
           - ${self:custom.private.teamPolicy}
