Use Environment Specific Numbers

--- a/product-photos/2.message/serverless.yml
+++ b/product-photos/2.message/serverless.yml
@@ -26,7 +26,7 @@ functions:
         Fn::ImportValue: ${self:custom.productPhotos.exportPhotoAssignmentsTableName}
       TWILIO_ACCOUNT_SID_ENCRYPTED: ${self:custom.private.twilio.accountSid}
       TWILIO_AUTH_TOKEN_ENCRYPTED: ${self:custom.private.twilio.authToken}
-      TWILIO_NUMBER: ${self:custom.private.twilio.number}
+      TWILIO_NUMBER: ${self:custom.private.twilio.${self:custom.stage}.number}
 
 resources:
   Resources:
